--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.20</version>
 				<configuration>
-					
+					<reportsDirectory>./test-output</reportsDirectory>
 					<suiteXmlFiles>
 						<suiteXmlFile>testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
